# edgeFinder

./: CMakeLists.txt  LICENSE  README.md
src/: AreaInformation.cpp  AreaInformation.h  Point.h  RamerDouglasPeucker.cpp  RamerDouglasPeucker.h  SvgBuilder.cpp  SvgBuilder.h  main.cpp
